[gd_scene load_steps=7 format=3 uid="uid://bg7wi8srgyqpp"]

[ext_resource type="Script" path="res://scripts/rain.gd" id="1_hbrmx"]
[ext_resource type="Texture2D" uid="uid://bc5by1p4caqc4" path="res://assets/sprites/raindrop.png" id="2_h8d3t"]
[ext_resource type="Texture2D" uid="uid://cy6i1u8ckuhth" path="res://assets/background/cloud_lonely.png" id="3_r33nu"]
[ext_resource type="AudioStream" uid="uid://dk34bmqxhnnm" path="res://assets/sounds/damage.ogg" id="4_ube04"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ym5u1"]
size = Vector2(1000, 600)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rtgxn"]
size = Vector2(3500, 2000)

[node name="Rain" type="Node2D"]
script = ExtResource("1_hbrmx")

[node name="RainParticles" type="CPUParticles2D" parent="."]
position = Vector2(15, 34)
amount = 25
texture = ExtResource("2_h8d3t")
emission_shape = 3
emission_rect_extents = Vector2(390, 1)
direction = Vector2(0, 1)
initial_velocity_min = 100.0
initial_velocity_max = 200.0
scale_amount_min = 3.0
scale_amount_max = 3.0

[node name="Cloud" type="Sprite2D" parent="."]
position = Vector2(-671, 491)
scale = Vector2(11, 11)
texture = ExtResource("3_r33nu")

[node name="DamageArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageArea"]
position = Vector2(0, 247)
shape = SubResource("RectangleShape2D_ym5u1")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="DamageNoise" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_ube04")

[node name="SkyChange" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SkyChange"]
position = Vector2(0, 571)
shape = SubResource("RectangleShape2D_rtgxn")

[connection signal="body_entered" from="DamageArea" to="." method="_on_damage_area_body_entered"]
[connection signal="body_exited" from="DamageArea" to="." method="_on_damage_area_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="SkyChange" to="." method="_on_sky_change_body_entered"]
[connection signal="body_exited" from="SkyChange" to="." method="_on_sky_change_body_exited"]
